--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="input_subtitle_hint">Input subtitle</string>
     <string name="input_description_hint">Input Description</string>
     <string name="fragment_label">Fragment</string>
+    <string name="navigation_label">Navigation</string>
 </resources>
